--- a/confluent-platform.yaml
+++ b/confluent-platform.yaml
@@ -7,8 +7,8 @@ metadata:
 spec:
   replicas: 3
   image:
-    application: confluentinc/cp-zookeeper-operator:6.1.0.0
-    init: confluentinc/cp-init-container-operator:6.1.0.0
+    application: confluentinc/cp-zookeeper:7.4.0
+    init: confluentinc/confluent-init-container:2.6.0
   dataVolumeCapacity: 10Gi
   logVolumeCapacity: 10Gi
 ---
@@ -20,9 +20,9 @@ metadata:
 spec:
   replicas: 3
   image:
-    application: confluentinc/cp-server-operator:6.1.0.0
-    init: confluentinc/cp-init-container-operator:6.1.0.0
-  dataVolumeCapacity: 10Gi
+    application: confluentinc/cp-server:7.4.0
+    init: confluentinc/confluent-init-container:2.6.0
+  dataVolumeCapacity: 100Gi
   metricReporter:
     enabled: true
 ---
@@ -34,8 +34,8 @@ metadata:
 spec:
   replicas: 1
   image:
-    application: my-azure-connector:1.0.0
-    init: confluentinc/cp-init-container-operator:6.1.0.0
+    application: MY_IMG_WITH_VERSION
+    init: confluentinc/confluent-init-container:2.6.0
   dependencies:
     kafka:
       bootstrapEndpoint: kafka:9071
@@ -49,8 +49,8 @@ metadata:
 spec:
   replicas: 1
   image:
-    application: confluentinc/cp-ksqldb-server-operator:6.1.0.0
-    init: confluentinc/cp-init-container-operator:6.1.0.0
+    application: confluentinc/cp-ksqldb-server:7.4.0
+    init: confluentinc/confluent-init-container:2.6.0
   dataVolumeCapacity: 10Gi
 ---
 apiVersion: platform.confluent.io/v1beta1
@@ -61,8 +61,8 @@ metadata:
 spec:
   replicas: 1
   image:
-    application: confluentinc/cp-enterprise-control-center-operator:6.1.0.0
-    init: confluentinc/cp-init-container-operator:6.1.0.0
+    application: confluentinc/cp-enterprise-control-center:7.4.0
+    init: confluentinc/confluent-init-container:2.6.0
   dataVolumeCapacity: 10Gi
   dependencies:
     schemaRegistry:
@@ -82,5 +82,19 @@ metadata:
 spec:
   replicas: 1
   image:
-    application: confluentinc/cp-schema-registry-operator:6.1.0.0
-    init: confluentinc/cp-init-container-operator:6.1.0.0
+    application: confluentinc/cp-schema-registry:7.4.0
+    init: confluentinc/confluent-init-container:2.6.0
+---
+apiVersion: platform.confluent.io/v1beta1
+kind: KafkaRestProxy
+metadata:
+  name: kafkarestproxy
+  namespace: confluent
+spec:
+  replicas: 1
+  image:
+    application: confluentinc/cp-kafka-rest:7.4.0
+    init: confluentinc/confluent-init-container:2.6.0
+  dependencies:
+    schemaRegistry:
+      url: http://schemaregistry.confluent.svc.cluster.local:8081
